@@ -122,6 +122,7 @@ static void
 out_splines (FILE * ps_file, spline_list_array_type shape)
 {
   unsigned this_list;
+  color_type last_color;
 
   for (this_list = 0; this_list < SPLINE_LIST_ARRAY_LENGTH (shape);
        this_list++)
@@ -132,19 +133,24 @@ out_splines (FILE * ps_file, spline_list_array_type shape)
       spline_list_type list = SPLINE_LIST_ARRAY_ELT (shape, this_list);
       spline_type first = SPLINE_LIST_ELT (list, 0);
 
-      c = k = 255 - list.color.r;
-      m = 255 - list.color.g;
-      if (m < k)
-        k = m;
-      y = 255 - list.color.b;
-      if (y < k)
-        k = y;
-      c -= k;
-      m -= k;
-      y -= k;
-      /* symbol k is used for CorelDraw 3/4 compatibility */
-      OUT4 ("%f %f %f %f k\n", (double) c/255.0,
-	    (double) m/255.0,(double) y/255.0, (double) k/255.0);
+      if (this_list == 0 || !COLOR_EQUAL(list.color, last_color))
+        {
+	  if (this_list > 0)
+	      OUT_LINE ("f");	      
+	  c = k = 255 - list.color.r;
+	  m = 255 - list.color.g;
+	  if (m < k)
+	      k = m;
+	  y = 255 - list.color.b;
+	  if (y < k)
+	      k = y;
+	  c -= k;
+	  m -= k;
+	  y -= k;
+	  /* symbol k is used for CorelDraw 3/4 compatibility */
+	  OUT4 ("%f %f %f %f k\n", (double) c/255.0,
+		(double) m/255.0,(double) y/255.0, (double) k/255.0);
+        }
       OUT_COMMAND2 (START_POINT (first).x, START_POINT (first).y, "m");
 
       for (this_spline = 0; this_spline < SPLINE_LIST_LENGTH (list);
@@ -160,8 +166,10 @@ out_splines (FILE * ps_file, spline_list_array_type shape)
                           END_POINT (s).x, END_POINT (s).y,
                           "c");
         }
-      OUT_LINE ("f");
+      last_color = list.color;
     }
+  if (SPLINE_LIST_ARRAY_LENGTH (shape) > 0)
+      OUT_LINE ("f");
 }
 
 
